default/objects/success__Winning_Way_Step__c/success__Winning_Way_Step__c.object-meta.xml
<CustomObject>
    <description>Winning Way Steps should be created for each Sales Stage contained in the Sales Process that is linked to the parent Winning Way. Each Winning Way Step contains a Behaviour Template which is a collection of Behaviours that are relevant to that specific Sales Stage, which in turn drives the Prediction calculation.</description>
    <label>Winning Way Step</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Winning Way Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Winning Way Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>