default/objects/success__Winning_Way_Step__c/fields/success__Behaviour_Template__c.field-meta.xml
<CustomField>
    <fullName>success__Behaviour_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Behaviour Template</label>
    <referenceTo>success__Team__c</referenceTo>
    <relationshipName>Sales_Process_Behaviours</relationshipName>
    <type>Lookup</type>
</CustomField>