default/objects/success__Winning_Way_Step__c/fields/success__Criteria__c.field-meta.xml
<CustomField>
    <fullName>success__Criteria__c</fullName>
    <label>Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>