default/objects/success__Winning_Way_Step__c/fields/success__Decay_Onset__c.field-meta.xml
<CustomField>
    <fullName>success__Decay_Onset__c</fullName>
    <label>Decay Onset</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>