default/objects/success__Winning_Way_Step__c/fields/success__Decay_Rate__c.field-meta.xml
<CustomField>
    <fullName>success__Decay_Rate__c</fullName>
    <label>Decay Rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>