default/objects/success__Winning_Way_Step__c/fields/success__Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>success__Stage_Name__c</fullName>
    <label>Stage Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>