default/objects/success__Winning_Way_Step__c/fields/success__Winning_Way__c.field-meta.xml
<CustomField>
    <fullName>success__Winning_Way__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Winning Way</label>
    <referenceTo>success__Winning_Way__c</referenceTo>
    <relationshipLabel>Winning Way Steps</relationshipLabel>
    <relationshipName>Winning_Way_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>